objects/Customer/fields/category_updated_At__c.field-meta.xml
<CustomField>
    <fullName>category_updated_At__c</fullName>
    <label>category updated At</label>
    <type>DateTime</type>
</CustomField>