objects/Customer/fields/Individual_Id__c.field-meta.xml
<CustomField>
    <fullName>Individual_Id__c</fullName>
    <label>Individual Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>