objects/Customer/fields/Lastorder_Id__c.field-meta.xml
<CustomField>
    <fullName>Lastorder_Id__c</fullName>
    <label>Lastorder Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>