objects/Customer/fields/Number_of_orders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_orders__c</fullName>
    <label>Number of orders</label>
    <length>100</length>
    <type>Text</type>
</CustomField>