objects/Customer/fields/Previous_Category__c.field-meta.xml
<CustomField>
    <fullName>Previous_Category__c</fullName>
    <label>Previous Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>