objects/Customer/listViews/All_Customers.listView-meta.xml
<ListView>
    <fullName>All_Customers</fullName>
    <columns>Name</columns>
    <columns>Category__c</columns>
    <columns>Amount_Spent__c</columns>
    <columns>Email__c</columns>
    <columns>Number_of_orders__c</columns>
    <columns>category_updated_At__c</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All Customers</label>
</ListView>